# raggy

./: .coverage  .gitignore  ABOUT.md  Cargo.toml  README.md  RULES.md  TESTS.md  app.py  compile-to-single.sh  debug_iroh.py  explore_iroh.py  iroh_node.py  main.py  pyproject.toml  requirements.txt  setup.py  test.out  test.sh  test.sh.save  veracity_rails.py  veracity_rails_module.py
.plandex/: project.json
iroh_example/: __init__.py  main.py
raggy/: __init__.py  __main__.py  cognition.py  cooperation.py  core.py  db.py  distributed.py  events.py  node.py  node_priority.py  ollama.py  reality.py  sync.py  systems.py  ui.py  veracity.py  visual.py
raggy-rs/: Cargo.toml
raggy2/: __init__.py  app.py  main.py  pyproject.toml  ui.py  verify.py
raggy_py/: __init__.py  iroh.py  test_iroh.py
src/: lib.rs  main.rs
tests/: conftest.py  integration_test.rs  integration_tests.rs  test_app.py  test_basic_iroh.py  test_cognition.py  test_cooperation.py  test_core.py  test_core_events.py  test_distributed.py  test_events.py  test_iroh.py  test_iroh_node.py  test_main.py  test_node.py  test_node_priority.py  test_ollama.py  test_reality.py  test_streamlit.py  test_streamlit_basics.py  test_veracity.py  test_veracity_rails.py  test_visual.py
veracityrails/: __init__.py  veracity_rails.py
