[package]
name = "iroh-basic"
version = "0.1.0"
edition = "2021"

[dependencies]
iroh = "0.27.0"
tokio = { version = "1.32", features = ["full"] }
anyhow = "1.0"
warp = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
config = "0.11"
tokenizers = "0.13.2"
once_cell = "1.18"

