[package]
name = "raggy-p2p"
version = "0.1.0"
edition = "2021"

[dependencies]
libp2p = { version = "0.53", features = ["tcp", "dns", "tokio", "noise", "yamux", "websocket", "ping", "macros", "kad", "identify", "autonat", "dcutr", "mdns", "gossipsub", "quic"] }
tokio = { version = "1.36", features = ["full"] }
futures = "0.3"
env_logger = "0.10"
log = "0.4"
clap = { version = "4.5", features = ["derive"] } 