[tool.poetry]
name = "iroh-example"
version = "0.1.0"
description = "An example project using iroh"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"
packages = [{include = "iroh_example"}]

[tool.poetry.dependencies]
python = "^3.8"
iroh = "0.27.0"
packaging = "^23.0"

[tool.poetry.group.test.dependencies]
pytest = "^8.0"
pytest-asyncio = "^0.23.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
