[package]
name = "iroh-basic"
version = "0.1.0"
edition = "2021"

[dependencies]
iroh = "0.27.0"
tokio = { version = "1.32", features = ["full"] }
anyhow = "1.0"
axum = "0.7.7"
tower = { version = "0.4", features = ["util"] }
tower-http = { version = "0.5", features = ["trace"] }
http = "1.0"
hyper = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
config = "0.11"
tokenizers = "0.13.2"
once_cell = "1.18"
mime = "0.3"

